content/boundary/v0.20.x/content/docs/monitor/index.mdx
---
layout: docs
page_title: Monitor Boundary
description: >-
  Discover resources to help you learn more about maintaining and operating Boundary, including information about metrics and health.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-10-29T10:56:20-04:00
last_modified: 2025-10-29T10:56:20-04:00
# END AUTO GENERATED METADATA
---

# Monitor Boundary

Visibility into various components of Boundary plays an important role in
ensuring the health of its controllers and workers.

You can export metrics for controllers
and workers and then configure them to be collected by Prometheus. Metrics
provide insight into the current state of a Boundary deployment by enabling the
diagnosis of deployed controllers and workers. Enabling metrics assists in the
detection and mitigation of anomalies in a deployment.
These docs describe the available metrics and the naming and labeling standards
used.

Additionally, the health of controllers can be monitored using the
`/health` endpoint. The health endpoint is enabled by defining a listener in
Boundary's configuration file, and a health response may be configured to add a
shutdown grace period process.

You can also configure Boundary to monitor events.
You can choose to monitor audit, observation, system, and telemetry events.
Boundary supports both file and stderr sinks for events and you can send events to multiple sinks.

Listeners let you configure the addresses and ports on which Boundary responds to requests.
You can configure TCP and Unix listeners.
Boundary also supports custom response headers for any requests made on controllers.
You can define headers based on the status code that is returned.

## Tutorials

To learn how to configure event filtering and sinks, complete the [Event filtering and sink configuration](/boundary/tutorials/self-managed-deployment/event-logging) tutorial.

To learn how to configure metrics collection, complete the [Visualize metrics with Prometheus](/boundary/tutorials/self-managed-deployment/prometheus-metrics) tutorial.

## More information

Refer to the following topics for the parameters you use to configure the addresses and ports on which Boundary responds to requests:

- [Listeners](/boundary/docs/monitor/listeners)
   - [TCP listeners](/boundary/docs/monitor/listeners/tcp)
   - [Unix listeners](/boundary/docs/monitor/listeners/unix)

Refer to the following topics for more information on the various ways to monitor Boundary:

- [Monitor metrics](/boundary/docs/monitor/metrics)
- [Monitor health](/boundary/docs/monitor/health)
- [Filter events](/boundary/docs/monitor/events/filter-events)
   - [Common sink parameters](/boundary/docs/monitor/events/common)
   - [File sink](/boundary/docs/monitor/events/file)
   - [Stderr sink](/boundary/docs/monitor/events/stderr)
