content/boundary/v1.0.x/content/docs/monitor/index.mdx
---
layout: docs
page_title: Monitor Boundary
description: >-
  Discover how to monitor Boundary controllers and workers using Prometheus metrics, the `/health` endpoint, event sinks, and debug mode traces.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-05-11T10:18:43-04:00
last_modified: 2026-08-10T22:18:14.000Z
# END AUTO GENERATED METADATA
---

# Monitor Boundary

Visibility into Boundary's components plays an important role in ensuring the health of its controllers and workers.

You can export metrics for controllers and workers and then configure them to be collected by Prometheus. Metrics provide insight into the current state of a Boundary deployment by enabling the diagnosis of deployed controllers and workers. Enabling metrics assists in the detection and mitigation of anomalies in a deployment.

These docs describe the available metrics and the naming and labeling standards used.

Controllers and workers both report their status through the `/health` endpoint.
You enable the endpoint by defining a listener with the `ops` purpose in the configuration file of the server you want to check.
Controllers report their status using the HTTP status code, and you can configure a shutdown grace period so that a controller reports as unhealthy before it shuts down.
Workers always return `200 OK` and report their status in the response body, which includes the worker's connection state to its upstream.

You can also configure Boundary to monitor events.
You can choose to monitor audit, observation, system, and telemetry events.
Boundary supports both file and stderr sinks for events and you can send events to multiple sinks.

Listeners let you configure the addresses and ports on which Boundary responds to requests.
You can configure TCP and Unix listeners.
Boundary also supports custom response headers for any requests made on controllers.
You can define headers based on the status code that is returned.

## Tutorials

To learn how to configure event filtering and sinks, complete the [Event filtering and sink configuration](/boundary/tutorials/self-managed-deployment/event-logging) tutorial.

To learn how to configure metrics collection, complete the [Visualize metrics with Prometheus](/boundary/tutorials/self-managed-deployment/prometheus-metrics) tutorial.

## Related monitoring topics

Refer to the following topics for the parameters you use to configure the addresses and ports on which Boundary responds to requests:

- [Listeners](/boundary/docs/monitor/listeners)
   - [TCP listeners](/boundary/docs/monitor/listeners/tcp)
   - [Unix listeners](/boundary/docs/monitor/listeners/unix)

Refer to the following topics for more information on the various ways to monitor Boundary:

- [Monitor metrics](/boundary/docs/monitor/metrics)
- [Monitor health](/boundary/docs/monitor/health)
- [Filter events](/boundary/docs/monitor/events/filter-events)
   - [Common sink parameters](/boundary/docs/monitor/events/common)
   - [File sink](/boundary/docs/monitor/events/file)
   - [Stderr sink](/boundary/docs/monitor/events/stderr)
